-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.4.0
-
60c4160ebd020e3855598739558385d02030f990
The debugger can end up in a state where both continue and start debugging are enabled, thus making F5 stops working then.
The way I can reproduce it: Open samegame.qmlproject, set a breakpoint and start debugging on hitting the breakpoint both the start debugging and continue actions are enabled.