Debugger: Avoid 'start debugging' action being enabled why debugging

Don't let updateDebugActions() (triggered e.g. by project changes)
mess with the state fo the Start Debugger, Step, Next actions while
an engine is running.

Change-Id: I08ee20c70f9ff712f928f8ba04ac3d60d5669f11
Task-number: QTCREATORBUG-6290
Reviewed-by: hjk <qthjk@ovi.com>